[package]
name = "length"
version = "0.2.2"
authors = ["Ringo Leese <webmaster@ringoleese.de>"]
edition = "2021"
description = "A library to handle length/distances easyly. It can parse a string with several units (m, km, mi, ft, ...) into the Length-struct and converting into other units."
repository = "https://github.com/ringostarr80/rust-length"
homepage = "https://github.com/ringostarr80/rust-length"
readme = "README.md"
license = "CC0-1.0"
keywords = ["length", "distance", "converter"]

[dependencies]
lazy_static = "1.4"
regex = "1.9"
